@@ -31,6 +31,8 @@
 	* libipmimonitoring/: Audit, remove unnecessary memsets, add +1 to
 	string buffers.
 
+	* libipmiconsole/: Audit, remove unnecessary memsets, add +1 to string buffers.
+
 2016-10-03 Albert Chu <chu11@llnl.gov>
 
 	* libfreeipmi/fru/ipmi-fru-data.c: Remove unnecessary memsets. 
